force-app/main/default/objects/Holding__c/Holding__c.object-meta.xml
<CustomObject>
    <label>Holding</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>