force-app/main/default/objects/Holding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Holdings</relationshipLabel>
    <relationshipName>Holdings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>