force-app/main/default/objects/Holding__c/fields/Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Book_Value__c</fullName>
    <formula>Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>