force-app/main/default/objects/Holding__c/fields/Commition__c.field-meta.xml
<CustomField>
    <fullName>Commition__c</fullName>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>