force-app/main/default/objects/Holding__c/fields/Current_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Value__c</fullName>
    <formula>Account__r.Current_Market_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>