force-app/main/default/objects/Holding__c/fields/Holding_Account__c.field-meta.xml
<CustomField>
    <fullName>Holding_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to link the Holding Account</description>
    <label>Holding Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Holdings (Holding Account)</relationshipLabel>
    <relationshipName>Holdings1</relationshipName>
    <type>Lookup</type>
</CustomField>