force-app/main/default/objects/Holding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Commition__c</columns>
    <columns>Date__c</columns>
    <columns>Action__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Book_Value__c</columns>
    <columns>Holding_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>